--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,9 @@
 <html>
     <body>
-        <h1>Mr Porter Test</h1>
-
         <p><img src="/mockups.jpg" width="300"></p>
-        
-        <code>{{products}}</code>
+
+        <div id="app"></div>
+        <script src="react.js"></script>
+        <script src='app.js'></script>
     </body>
 </html>
