--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,8 @@
         <p><img src="/mockups.jpg" width="300"></p>
 
         <div id="app"></div>
-        <script src="react.js"></script>
+        <script src="bower_components/jquery/dist/jquery.js"></script>
+        <script src="bower_components/react/react.js"></script>
         <script src='app.js'></script>
     </body>
 </html>
