--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,8 @@
 <html>
+    <head>
+      <link rel="stylesheet" href="app.css">
+    </head>
     <body>
-        <p><img src="/mockups.jpg" width="300"></p>
-
         <div id="app"></div>
         <script src="bower_components/jquery/dist/jquery.js"></script>
         <script src="bower_components/react/react.js"></script>
