--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,1 +1,13 @@
 @import 'bower_components/bskyb-typography/src/scss/typography';
+
+*, *:before, *:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.product {
+  width: 33%;
+  display: inline-block;
+  min-width: 300px;
+}
