Optimised images for retina screens

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -17,6 +17,10 @@ ul {
   display: inline-block;
   min-width: 300px;
   padding: 20px;
+  img {
+    max-height: 235px;
+    max-width: 245px;
+  }
 }
 
 h1 {
