--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,6 +7,7 @@
         <div id="app"></div>
         <script src="bower_components/jquery/dist/jquery.js"></script>
         <script src="bower_components/react/react.js"></script>
+        <script src="bower_components/react-infinite/dist/react-infinite.js"></script>
         <script src='app.js'></script>
     </body>
 </html>
